# whisper-diarization

./: .dockerignore  .gitignore  Dockerfile  Speaker_Identification_Verification.ipynb  Whisper_Transcription_+_NeMo_Diarization.ipynb  diarize_with_checkpoints.py  grey_vs_brady.pkl  pyproject.toml  requirements.txt
