[project]
name = "whisper-diarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wget",
    "numpy",
    "nemo_toolkit[asr]==1.17.0",
    "transformers>=4.26.1",
    "faster-whisper==0.5.1",
    "deepmultilingualpunctuation",
    "torch",
    "yaspin",
]

[tool.uv]
no-build-isolation = true

[build-system]
requires = ["numpy", "setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"
